@@ -19,6 +19,7 @@ Opcache:
 PDO_PGSQL:
   . Fixed GH-12423, DSN credentials being prioritized over the user/password
     PDO constructor arguments. (SakiTakamachi)
+  . Fixed native float support with pdo_pgsql query results. (Yurunsoft)
 
 PGSQL:
   . Added the possibility to have no conditions for pg_select. (OmarEmaraDev)
